# FluentAgent

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  claude.md  pyproject.toml
configs/: example_naca0012.yaml  example_naca2412.yaml  schema_reference.yaml
docs/: ARCHITECTURE.md  CONTRIBUTING.md
geometries/: naca0012.csv  naca2412.csv
prompts/: config_generation.md
src/fluent_agent/: __init__.py  cli.py  config.py  constants.py  geometry.py  logger.py  meshing.py  physics_rules.py
tests/: conftest.py  test_config.py  test_geometry.py  test_meshing.py  test_physics_rules.py
